# tg-bot-kbju

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  plan.md  pyproject.toml  spec.md
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_user_language_and_activity.py  d89f40512a33_initial_tables.py
app/: __init__.py
app/bot/: __init__.py  factory.py  formatters.py  keyboards.py  middlewares.py
app/bot/handlers/: __init__.py  admin.py  goals.py  history.py  language.py  meal.py  (+5 more)
app/core/: __init__.py  config.py  logging.py  time.py  version.py
app/db/: __init__.py  models.py  repos.py  session.py
app/i18n/: __init__.py
app/reports/: __init__.py  stats.py
app/services/: __init__.py  nutrition_ai.py  precheck.py  rate_limit.py
app/web/: __init__.py  main.py
docs/: README.md  api.md  architecture.md  configuration.md  database.md  deployment.md  development.md  i18n.md  scheduled-tasks.md  user-guide.md
tests/: conftest.py  test_activity.py  test_admin.py  test_auto_save.py  test_config.py  test_db_integration.py  test_delete_window.py  test_edit_feedback_flow.py  test_edit_feedback_keyboard.py  test_edit_timeout_lifecycle.py  test_edit_window.py  test_formatters.py  test_goals_stats_handlers.py  test_i18n.py  test_language.py  test_nutrition_ai.py  test_precheck.py  test_processing_messages.py  test_purge.py  test_rate_limit.py  test_remind.py  test_reports.py  test_time.py  test_timezone_gate.py  test_tz_confirmation.py  test_user_columns.py  test_version.py
(+2 files in other folders)
