[project]
name = "tg-bot-kbju"
version = "0.1.0"
description = "Telegram bot"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ruslan" }]

dependencies = [
  "aiogram==3.6.0",
  "python-dotenv==1.0.1",
  "httpx>=0.27,<0.28",
  "openai==1.40.0",
  "cryptography==43.0.1",
  "fastapi>=0.128,<1.0",
  "uvicorn>=0.40,<0.41",
]

[dependency-groups]
dev = [
  "pytest>=9,<10",
  "ruff>=0.9,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
